# TontoCompiler

./: .gitignore  CMakeLists.txt  README.md
src/: AST.cpp  AST.h  CMakeLists.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SymbolTable.cpp  SymbolTable.h  lexer.l  main.cpp  parser.y  scanner.cpp  scanner.h  token.h  tokens.h
tests/: mode.tonto  phase.tonto  relator.tonto  role.tonto  roleMixin.tonto  subkind.tonto
